--- a/collabplot.cabal
+++ b/collabplot.cabal
@@ -20,6 +20,7 @@ executable collabplot
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base      >= 4.8 && < 4.9,
-                       lucid-svg >= 0.4 && < 0.5
+                       lucid-svg >= 0.4 && < 0.5,
+                       text
   hs-source-dirs:      src
   default-language:    Haskell2010
