Model and instances

--- a/collabplot.cabal
+++ b/collabplot.cabal
@@ -17,9 +17,11 @@ cabal-version:       >=1.10
 
 executable collabplot
   main-is:             Main.hs
-  other-modules:       Shadow, Primitives
+  other-modules:       Shadow, Primitives, Utils, Ingest, Model
   -- other-extensions:    
   build-depends:       base      >= 4.8 && < 4.9,
+                       aeson     >= 0.8 && < 0.10,
+                       cassava   >= 0.4 && < 0.5,
                        lucid-svg >= 0.4 && < 0.5,
                        text
   hs-source-dirs:      src
