--- a/collabplot.cabal
+++ b/collabplot.cabal
@@ -21,8 +21,10 @@ executable collabplot
   -- other-extensions:    
   build-depends:       base      >= 4.8 && < 4.9,
                        aeson     >= 0.8 && < 0.10,
+                       bytestring,
                        cassava   >= 0.4 && < 0.5,
                        lucid-svg >= 0.4 && < 0.5,
-                       text
+                       text,
+                       vector
   hs-source-dirs:      src
   default-language:    Haskell2010
