Better schema and ingestion

--- a/collabplot.cabal
+++ b/collabplot.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 
 executable collabplot
   main-is:             Main.hs
-  other-modules:       Shadow, Primitives, Utils, Ingest, Model
+  other-modules:       Shadow, Primitives, Utils, Model
   -- other-extensions:    
   build-depends:       base      >= 4.8 && < 4.9,
                        aeson     >= 0.8 && < 0.10,
