--- a/collabplot.cabal
+++ b/collabplot.cabal
@@ -23,8 +23,10 @@ executable collabplot
                        aeson     >= 0.8 && < 0.10,
                        bytestring,
                        cassava   >= 0.4 && < 0.5,
+                       json-schema >= 0.7 && < 0.8,
                        lucid-svg >= 0.4 && < 0.5,
                        text,
+                       unordered-containers,
                        vector
   hs-source-dirs:      src
   default-language:    Haskell2010
