--- a/server/server.cabal
+++ b/server/server.cabal
@@ -27,6 +27,7 @@ Executable server
     aeson                     >= 0.8     && < 0.10,
     bytestring                >= 0.9.1   && < 0.11,
     heist                     >= 0.14    && < 0.15,
+    errors                    >= 1.4     && < 2.1,
     MonadCatchIO-transformers >= 0.2.1   && < 0.4,
     mtl                       >= 2       && < 3,
     postgresql-simple         >= 0.4     && < 0.5,
@@ -39,7 +40,8 @@ Executable server
     text                      >= 0.11    && < 1.3,
     time                      >= 1.1     && < 1.6,
     uuid                      >= 1.3     && < 1.4,
-    xmlhtml                   >= 0.1     && < 0.3
+    xmlhtml                   >= 0.1     && < 0.3,
+    collabplot
 
   if flag(old-base)
     build-depends:
