get working db communication

--- a/client/client.cabal
+++ b/client/client.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 
 executable client
   main-is:             Main.hs
-  other-modules:       Shadow, Primitives, Utils, Model, Figure, Page
+  other-modules:       Shadow, Primitives, Utils, Model, Figure, Page, Menus
   -- other-extensions:    
   build-depends:       base      >= 4.8 && < 4.9,
                        aeson     >= 0.8 && < 0.10,
@@ -27,6 +27,7 @@ executable client
                        data-default,
                        data-hash,
                        HTTP,
+                       uuid,
                        cassava   >= 0.4 && < 0.5,
                        ghcjs-dom,
                        lucid >= 2.9 && < 2.10,
