Got some kind of time control over rendering, but very low frame rates. space leak?

--- a/client/client.cabal
+++ b/client/client.cabal
@@ -36,6 +36,7 @@ executable client
                        reflex-dom,
                        reflex-dom-contrib,
                        text,
+                       time,
                        transformers,
                        unordered-containers,
                        vector,
